--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,6 @@ jobs:
       - name: Build and test with Gradle
         env:
           GRADLE_OPTS: "-Dorg.gradle.daemon=true"
-        run: ./gradlew test build :publishIntershopMvnPublicationToMavenRepository -s --scan
+        run: ./gradlew test build publishIntershopMvnPublicationToMavenRepository -s --scan
       - name: Post Build
         run: rm -f $HOME/.gradle/gradle.properties
